# jira-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  bump_version.sh  package-lock.json  pyproject.toml  server.json
.github/workflows/: release.yml
docs/: README.md  contributing.mdx  development.mdx  docs.json  feature-request.mdx  index.mdx  quickstart.mdx  report-bug.mdx
docs/ai-tools/: claude-code.mdx  cursor.mdx  windsurf.mdx
src/: __version__.py  main.py
src/models/: jira_actions.py  jira_tickets.py
src/tools/: jira_executor.py  tool_utils.py
tests/: conftest.py  test_jira_actions.py  test_jira_executor.py  test_jira_tickets.py  test_main.py  test_tool_utils.py
