[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jira-mcp"
dynamic = ["version"]
description = "Jira MCP for controlling Jira through Jira Command Line."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.25.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[tool.hatch.version]
path = "src/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
extend-select = [
  "I", # isort
  "D", # Docstrings. Define the type below.
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "hatch>=1.16.2",
    "pre-commit>=4.0.0",
    "pytest>=9.0.2",
    "ruff>=0.14.11",
]

[project.scripts]
jira-mcp = "src.main:main"
